// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sdk/transferData > asset 'laos' from source 'Moonbeam' to destination 'Laos' > should get expected balances 1`] = `
{
  "destination": {
    "balance": _AssetAmount {
      "address": undefined,
      "amount": 1235734567890000000n,
      "decimals": 18,
      "ids": undefined,
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
    "chain": _EvmParachain {
      "assets": Map {
        "laos" => _ChainAsset {
          "address": undefined,
          "decimals": 18,
          "ids": undefined,
          "key": "laos",
          "min": undefined,
          "originSymbol": "LAOS",
          "symbol": undefined,
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": undefined,
      "ecosystem": "polkadot",
      "explorer": undefined,
      "genesisHash": "0xe8aecc950e82f1a375cf650fa72d07e0ad9bef7118f49b92283b63e88b1de88b",
      "id": 0,
      "isEvmSigner": false,
      "isRelay": false,
      "isTestChain": false,
      "key": "laos-mainnet",
      "name": "Laos",
      "parachainId": 3370,
      "relayGenesisHash": undefined,
      "rpc": "",
      "ss58Format": 42,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": undefined,
      "ws": [
        "wss://rpc.laos.laosfoundation.io",
      ],
    },
    "existentialDeposit": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 18,
      "ids": undefined,
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": undefined,
      "amount": 25000000000000000n,
      "decimals": 18,
      "ids": undefined,
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 18,
      "ids": undefined,
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
    "sovereignAccountBalances": undefined,
  },
  "getEstimate": [Function],
  "max": _AssetAmount {
    "address": "0xffffffffdd704e8e824a5eec47de88f5b9e13588",
    "amount": 1230012345000000000n,
    "decimals": 18,
    "ids": {
      "id": "294342517635293430510451841925413680520",
    },
    "key": "laos",
    "min": undefined,
    "originSymbol": "LAOS",
    "symbol": undefined,
  },
  "min": _AssetAmount {
    "address": undefined,
    "amount": 25000000000000000n,
    "decimals": 18,
    "ids": undefined,
    "key": "laos",
    "min": undefined,
    "originSymbol": "LAOS",
    "symbol": undefined,
  },
  "source": {
    "balance": _AssetAmount {
      "address": "0xffffffffdd704e8e824a5eec47de88f5b9e13588",
      "amount": 1230012345000000000n,
      "decimals": 18,
      "ids": {
        "id": "294342517635293430510451841925413680520",
      },
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
    "chain": _EvmParachain {
      "assets": Map {
        "aca" => _ChainAsset {
          "address": "0xffffFFffa922Fef94566104a6e5A35a4fCDDAA9f",
          "decimals": 12,
          "ids": {
            "id": "224821240862170613278369189818311486111",
          },
          "key": "aca",
          "min": undefined,
          "originSymbol": "ACA",
          "symbol": undefined,
        },
        "astr" => _ChainAsset {
          "address": "0xFfFFFfffA893AD19e540E172C10d78D4d479B5Cf",
          "decimals": 18,
          "ids": {
            "id": "224077081838586484055667086558292981199",
          },
          "key": "astr",
          "min": undefined,
          "originSymbol": "ASTR",
          "symbol": undefined,
        },
        "aseed" => _ChainAsset {
          "address": "0xfFfFFFFF52C56A9257bB97f4B2b6F7B2D624ecda",
          "decimals": 12,
          "ids": {
            "id": "110021739665376159354538090254163045594",
          },
          "key": "aseed",
          "min": undefined,
          "originSymbol": "aSEED",
          "symbol": undefined,
        },
        "axlusdc" => _ChainAsset {
          "address": "0xCa01a1D0993565291051daFF390892518ACfAD3A",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "axlusdc",
          "min": undefined,
          "originSymbol": "axlUSDC",
          "symbol": undefined,
        },
        "bnc" => _ChainAsset {
          "address": "0xFFffffFf7cC06abdF7201b350A1265c62C8601d2",
          "decimals": 12,
          "ids": {
            "id": "165823357460190568952172802245839421906",
          },
          "key": "bnc",
          "min": undefined,
          "originSymbol": "BNC",
          "symbol": undefined,
        },
        "cfg" => _ChainAsset {
          "address": "0xFFfFfFff44bD9D2FFEE20B25D1Cf9E78Edb6Eae3",
          "decimals": 18,
          "ids": {
            "id": "91372035960551235635465443179559840483",
          },
          "key": "cfg",
          "min": undefined,
          "originSymbol": "CFG",
          "symbol": undefined,
        },
        "dai" => _ChainAsset {
          "address": "0x06e605775296e851FF43b4dAa541Bb0984E9D6fD",
          "decimals": 18,
          "ids": {
            "palletInstance": 110,
          },
          "key": "dai",
          "min": undefined,
          "originSymbol": "DAI",
          "symbol": undefined,
        },
        "ded" => _ChainAsset {
          "address": "0xfFffFFFf5da2d7214D268375cf8fb1715705FdC6",
          "decimals": 10,
          "ids": {
            "id": "124463719055550872076363892993240202694",
          },
          "key": "ded",
          "min": undefined,
          "originSymbol": "DED",
          "symbol": undefined,
        },
        "dot" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 10,
          "ids": {
            "id": "42259045809535163221576417993425387648",
          },
          "key": "dot",
          "min": undefined,
          "originSymbol": "DOT",
          "symbol": undefined,
        },
        "eq" => _ChainAsset {
          "address": "0xFffFFfFf8f6267e040D8a0638C576dfBa4F0F6D6",
          "decimals": 9,
          "ids": {
            "id": "190590555344745888270686124937537713878",
          },
          "key": "eq",
          "min": undefined,
          "originSymbol": "EQ",
          "symbol": undefined,
        },
        "eqd" => _ChainAsset {
          "address": "0xFFffFfFF8cdA1707bAF23834d211B08726B1E499",
          "decimals": 9,
          "ids": {
            "id": "187224307232923873519830480073807488153",
          },
          "key": "eqd",
          "min": undefined,
          "originSymbol": "EQD",
          "symbol": undefined,
        },
        "fil" => _ChainAsset {
          "address": "0xfFFfFFFF6C57e17D210DF507c82807149fFd70B2",
          "decimals": 18,
          "ids": {
            "id": "144012926827374458669278577633504620722",
          },
          "key": "fil",
          "min": undefined,
          "originSymbol": "FIL",
          "symbol": undefined,
        },
        "glmr" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 10,
          },
          "key": "glmr",
          "min": 100000000000000000n,
          "originSymbol": "GLMR",
          "symbol": undefined,
        },
        "hdx" => _ChainAsset {
          "address": "0xFFFfFfff345Dc44DDAE98Df024Eb494321E73FcC",
          "decimals": 12,
          "ids": {
            "id": "69606720909260275826784788104880799692",
          },
          "key": "hdx",
          "min": undefined,
          "originSymbol": "HDX",
          "symbol": undefined,
        },
        "ibtc" => _ChainAsset {
          "address": "0xFFFFFfFf5AC1f9A51A93F5C527385edF7Fe98A52",
          "decimals": 8,
          "ids": {
            "id": "120637696315203257380661607956669368914",
          },
          "key": "ibtc",
          "min": undefined,
          "originSymbol": "IBTC",
          "symbol": undefined,
        },
        "intr" => _ChainAsset {
          "address": "0xFffFFFFF4C1cbCd97597339702436d4F18a375Ab",
          "decimals": 10,
          "ids": {
            "id": "101170542313601871197860408087030232491",
          },
          "key": "intr",
          "min": undefined,
          "originSymbol": "INTR",
          "symbol": undefined,
        },
        "ldot" => _ChainAsset {
          "address": "0xFFfFfFffA9cfFfa9834235Fe53f4733F1b8B28d4",
          "decimals": 10,
          "ids": {
            "id": "225719522181998468294117309041779353812",
          },
          "key": "ldot",
          "min": undefined,
          "originSymbol": "LDOT",
          "symbol": undefined,
        },
        "manta" => _ChainAsset {
          "address": "0xfFFffFFf7D3875460d4509eb8d0362c611B4E841",
          "decimals": 18,
          "ids": {
            "id": "166446646689194205559791995948102903873",
          },
          "key": "manta",
          "min": undefined,
          "originSymbol": "MANTA",
          "symbol": undefined,
        },
        "nodl" => _ChainAsset {
          "address": "0xfffffffFe896ba7Cb118b9Fa571c6dC0a99dEfF1",
          "decimals": 11,
          "ids": {
            "id": "309163521958167876851250718453738106865",
          },
          "key": "nodl",
          "min": undefined,
          "originSymbol": "NODL",
          "symbol": undefined,
        },
        "neuro" => _ChainAsset {
          "address": "0xFfffffFfB3229c8E7657eABEA704d5e75246e544",
          "decimals": 12,
          "ids": {
            "id": "238111524681612888331172110363070489924",
          },
          "key": "neuro",
          "min": undefined,
          "originSymbol": "NEURO",
          "symbol": undefined,
        },
        "peaq" => _ChainAsset {
          "address": "0xFffFFFFFEC4908b74688a01374f789B48E9a3eab",
          "decimals": 18,
          "ids": {
            "id": "314077021455772878282433861213184736939",
          },
          "key": "peaq",
          "min": undefined,
          "originSymbol": "PEAQ",
          "symbol": undefined,
        },
        "pha" => _ChainAsset {
          "address": "0xFFFfFfFf63d24eCc8eB8a7b5D0803e900F7b6cED",
          "decimals": 12,
          "ids": {
            "id": "132685552157663328694213725410064821485",
          },
          "key": "pha",
          "min": undefined,
          "originSymbol": "PHA",
          "symbol": undefined,
        },
        "pen" => _ChainAsset {
          "address": "0xffFFfFFf2257622F345E1ACDe0D4f46D7d1D77D0",
          "decimals": 12,
          "ids": {
            "id": "45647473099451451833602657905356404688",
          },
          "key": "pen",
          "min": undefined,
          "originSymbol": "PEN",
          "symbol": undefined,
        },
        "ring" => _ChainAsset {
          "address": "0xFfffFfff5e90e365eDcA87fB4c8306Df1E91464f",
          "decimals": 18,
          "ids": {
            "id": "125699734534028342599692732320197985871",
          },
          "key": "ring",
          "min": undefined,
          "originSymbol": "RING",
          "symbol": undefined,
        },
        "sub" => _ChainAsset {
          "address": "0xfFfFffFf43B4560Bc0C451a3386E082bff50aC90",
          "decimals": 10,
          "ids": {
            "id": "89994634370519791027168048838578580624",
          },
          "key": "sub",
          "min": undefined,
          "originSymbol": "SUB",
          "symbol": undefined,
        },
        "usdc" => _ChainAsset {
          "address": "0xFFfffffF7D2B0B761Af01Ca8e25242976ac0aD7D",
          "decimals": 6,
          "ids": {
            "id": "166377000701797186346254371275954761085",
            "palletInstance": 110,
          },
          "key": "usdc",
          "min": undefined,
          "originSymbol": "USDC",
          "symbol": "xcUSDC",
        },
        "usdcwh" => _ChainAsset {
          "address": "0x931715FEE2d06333043d11F658C8CE934aC61D0c",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": "USDC",
        },
        "usdtwh" => _ChainAsset {
          "address": "0xc30E9cA94CF52f3Bf5692aaCF81353a27052c46f",
          "decimals": 6,
          "ids": {
            "palletInstance": 110,
          },
          "key": "usdtwh",
          "min": undefined,
          "originSymbol": "USDT.Wh",
          "symbol": undefined,
        },
        "usdt" => _ChainAsset {
          "address": "0xFFFFFFfFea09FB06d082fd1275CD48b191cbCD1d",
          "decimals": 6,
          "ids": {
            "id": "311091173110107856861649819128533077277",
            "palletInstance": 110,
          },
          "key": "usdt",
          "min": undefined,
          "originSymbol": "USDT",
          "symbol": "xcUSDT",
        },
        "vastr" => _ChainAsset {
          "address": "0xFffFffff55C732C47639231a4C4373245763d26E",
          "decimals": 18,
          "ids": {
            "id": "114018676402354620972806895487280206446",
          },
          "key": "vastr",
          "min": undefined,
          "originSymbol": "vASTR",
          "symbol": undefined,
        },
        "vdot" => _ChainAsset {
          "address": "0xFFFfffFf15e1b7E3dF971DD813Bc394deB899aBf",
          "decimals": 10,
          "ids": {
            "id": "29085784439601774464560083082574142143",
          },
          "key": "vdot",
          "min": undefined,
          "originSymbol": "vDOT",
          "symbol": undefined,
        },
        "vfil" => _ChainAsset {
          "address": "0xFffffFffCd0aD0EA6576B7b285295c85E94cf4c1",
          "decimals": 18,
          "ids": {
            "id": "272547899416482196831721420898811311297",
          },
          "key": "vfil",
          "min": undefined,
          "originSymbol": "vFIL",
          "symbol": undefined,
        },
        "vglmr" => _ChainAsset {
          "address": "0xFfFfFFff99dABE1a8De0EA22bAa6FD48fdE96F6c",
          "decimals": 18,
          "ids": {
            "id": "204507659831918931608354793288110796652",
          },
          "key": "vglmr",
          "min": undefined,
          "originSymbol": "vGLMR",
          "symbol": undefined,
        },
        "vmanta" => _ChainAsset {
          "address": "0xFFfFFfFfdA2a05FB50e7ae99275F4341AEd43379",
          "decimals": 18,
          "ids": {
            "id": "289989900872525819559124583375550296953",
          },
          "key": "vmanta",
          "min": undefined,
          "originSymbol": "vMANTA",
          "symbol": undefined,
        },
        "wbtc" => _ChainAsset {
          "address": "0xE57eBd2d67B462E9926e04a8e33f01cD0D64346D",
          "decimals": 8,
          "ids": {
            "palletInstance": 110,
          },
          "key": "wbtc",
          "min": undefined,
          "originSymbol": "WBTC",
          "symbol": undefined,
        },
        "weth" => _ChainAsset {
          "address": "0xab3f0245B83feB11d15AAffeFD7AD465a59817eD",
          "decimals": 18,
          "ids": {
            "palletInstance": 110,
          },
          "key": "weth",
          "min": undefined,
          "originSymbol": "WETH",
          "symbol": undefined,
        },
        "ztg" => _ChainAsset {
          "address": "0xFFFFfffF71815ab6142E0E20c7259126C6B40612",
          "decimals": 10,
          "ids": {
            "id": "150874409661081770150564009349448205842",
          },
          "key": "ztg",
          "min": undefined,
          "originSymbol": "ZTG",
          "symbol": undefined,
        },
        "pink" => _ChainAsset {
          "address": "0xfFfFFfFf30478fAFBE935e466da114E14fB3563d",
          "decimals": 10,
          "ids": {
            "id": "64174511183114006009298114091987195453",
          },
          "key": "pink",
          "min": undefined,
          "originSymbol": "PINK",
          "symbol": undefined,
        },
        "stink" => _ChainAsset {
          "address": "0xffffffff54c556bd1d0f64ec6c78f1b477525e56",
          "decimals": 10,
          "ids": {
            "id": "112679793397406599376365943185137098326",
          },
          "key": "stink",
          "min": undefined,
          "originSymbol": "STINK",
          "symbol": undefined,
        },
        "apillon" => _ChainAsset {
          "address": "0xffffffff8a9736b44ebf188972725bed67bf694e",
          "decimals": 18,
          "ids": {
            "id": "184218609779515850660274730699350567246",
          },
          "key": "apillon",
          "min": undefined,
          "originSymbol": "NCTR",
          "symbol": undefined,
        },
        "wifd" => _ChainAsset {
          "address": "0xffffffff2e1d1ac9ea1686255befe995b31abc96",
          "decimals": 10,
          "ids": {
            "id": "61295607754960722617854661686514597014",
          },
          "key": "wifd",
          "min": undefined,
          "originSymbol": "WIFD",
          "symbol": undefined,
        },
        "wbtce" => _ChainAsset {
          "address": "0xffffffff1b4bb1ac5749f73d866ffc91a3432c47",
          "decimals": 8,
          "ids": {
            "id": "36282181791341254438422467838694599751",
          },
          "key": "wbtce",
          "min": undefined,
          "originSymbol": "WBTC.e",
          "symbol": undefined,
        },
        "wethe" => _ChainAsset {
          "address": "0xffffffff86829afe1521ad2296719df3ace8ded7",
          "decimals": 18,
          "ids": {
            "id": "178794693648360392906933130845919698647",
          },
          "key": "wethe",
          "min": undefined,
          "originSymbol": "WETH.e",
          "symbol": undefined,
        },
        "wstethe" => _ChainAsset {
          "address": "0xffffffff5d5deb44bf7278dee5381beb24cb6573",
          "decimals": 18,
          "ids": {
            "id": "124105859028862849477017063633156007283",
          },
          "key": "wstethe",
          "min": undefined,
          "originSymbol": "wstETH.e",
          "symbol": undefined,
        },
        "laos" => _ChainAsset {
          "address": "0xffffffffdd704e8e824a5eec47de88f5b9e13588",
          "decimals": 18,
          "ids": {
            "id": "294342517635293430510451841925413680520",
          },
          "key": "laos",
          "min": undefined,
          "originSymbol": "LAOS",
          "symbol": undefined,
        },
        "eurc" => _ChainAsset {
          "address": "0xffffffffa608ec1332131289cbd8a97a0bb3d90f",
          "decimals": 12,
          "ids": {
            "id": "220698173844663170714431919474506717455",
          },
          "key": "eurc",
          "min": undefined,
          "originSymbol": "EURC",
          "symbol": undefined,
        },
        "movr" => _ChainAsset {
          "address": "0xffffffff54c47f43713fd9211724362697f1a302",
          "decimals": 18,
          "ids": {
            "id": 112675423039561305557350799263187182338n,
          },
          "key": "movr",
          "min": undefined,
          "originSymbol": "MOVR",
          "symbol": "MOVR.mr",
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": undefined,
      "ecosystem": "polkadot",
      "explorer": {
        "base": "https://moonbeam.moonscan.io",
        "txPath": "/tx",
      },
      "genesisHash": "0xfe58ea77779b7abda7da4ec526d14db9b1e9cd40a217c34892af80a9b332b76d",
      "id": 1284,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": false,
      "key": "moonbeam",
      "name": "Moonbeam",
      "parachainId": 2004,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonbeam.network",
      "ss58Format": 1284,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": {
        "name": "Moonbeam",
      },
      "ws": [
        "wss://wss.api.moonbeam.network",
      ],
    },
    "destinationFee": _AssetAmount {
      "address": "0xffffffffdd704e8e824a5eec47de88f5b9e13588",
      "amount": 25000000000000000n,
      "decimals": 18,
      "ids": {
        "id": "294342517635293430510451841925413680520",
      },
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
    "destinationFeeBalance": _AssetAmount {
      "address": "0xffffffffdd704e8e824a5eec47de88f5b9e13588",
      "amount": 1230012345000000000n,
      "decimals": 18,
      "ids": {
        "id": "294342517635293430510451841925413680520",
      },
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "glmr",
      "min": 100000000000000000n,
      "originSymbol": "GLMR",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 3679218750000000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "glmr",
      "min": 100000000000000000n,
      "originSymbol": "GLMR",
      "symbol": undefined,
    },
    "feeBalance": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 1330000000000000000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 10,
      },
      "key": "glmr",
      "min": 100000000000000000n,
      "originSymbol": "GLMR",
      "symbol": undefined,
    },
    "max": _AssetAmount {
      "address": "0xffffffffdd704e8e824a5eec47de88f5b9e13588",
      "amount": 1230012345000000000n,
      "decimals": 18,
      "ids": {
        "id": "294342517635293430510451841925413680520",
      },
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": "0xffffffffdd704e8e824a5eec47de88f5b9e13588",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "id": "294342517635293430510451841925413680520",
      },
      "key": "laos",
      "min": undefined,
      "originSymbol": "LAOS",
      "symbol": undefined,
    },
  },
  "transfer": [Function],
}
`;

exports[`sdk/transferData > asset 'unit' from source 'Alphanet Relay' to destination 'Moonbase Alpha' > should get expected balances 1`] = `
{
  "destination": {
    "balance": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 10000n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "chain": _EvmParachain {
      "assets": Map {
        "alan" => _ChainAsset {
          "address": "0x9133c5a22024118804089f1fB752b7B2ce2a6351",
          "decimals": 18,
          "ids": {
            "palletInstance": 48,
          },
          "key": "alan",
          "min": undefined,
          "originSymbol": "ALAN",
          "symbol": undefined,
        },
        "ampe" => _ChainAsset {
          "address": "0xfFfFfffF7fee8415e1c2AC3A15C48D3546B95e16",
          "decimals": 12,
          "ids": {
            "id": "170050401128744171791743427490841452054",
          },
          "key": "ampe",
          "min": undefined,
          "originSymbol": "AMPE",
          "symbol": undefined,
        },
        "dev" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 3,
          },
          "key": "dev",
          "min": 10000000000000000n,
          "originSymbol": "DEV",
          "symbol": undefined,
        },
        "lit" => _ChainAsset {
          "address": "0xfffFFfFF31103d490325BB0a8E40eF62e2F614C0",
          "decimals": 12,
          "ids": {
            "id": "65216491554813189869575508812319036608",
          },
          "key": "lit",
          "min": undefined,
          "originSymbol": "LIT",
          "symbol": undefined,
        },
        "maos" => _ChainAsset {
          "address": "0xffffffff06a14960bddc8610d0e694d39a3c682e",
          "decimals": 18,
          "ids": {
            "id": "8812816049497534070792537960559175726",
            "palletInstance": 48,
          },
          "key": "maos",
          "min": undefined,
          "originSymbol": "MAOS",
          "symbol": undefined,
        },
        "otp" => _ChainAsset {
          "address": "0xFfffffFfB3229c8E7657eABEA704d5e75246e544",
          "decimals": 12,
          "ids": {
            "id": "238111524681612888331172110363070489924",
          },
          "key": "otp",
          "min": undefined,
          "originSymbol": "OTP",
          "symbol": undefined,
        },
        "paring" => _ChainAsset {
          "address": "0xFFFffFfF8283448b3cB519Ca4732F2ddDC6A6165",
          "decimals": 18,
          "ids": {
            "id": "173481220575862801646329923366065693029",
          },
          "key": "paring",
          "min": undefined,
          "originSymbol": "PARING",
          "symbol": undefined,
        },
        "pica" => _ChainAsset {
          "address": "0xFFFfFFFF10DD5Fd142163a40Ce0dae8c56e2801f",
          "decimals": 6,
          "ids": {
            "id": "22417088946346045371238623691600461855",
          },
          "key": "pica",
          "min": undefined,
          "originSymbol": "PICA",
          "symbol": undefined,
        },
        "tt1" => _ChainAsset {
          "address": "0xfFffFfFf75976211C786fe4d73d2477e222786Ac",
          "decimals": 18,
          "ids": {
            "id": "156305701417244550631956600137082963628",
          },
          "key": "tt1",
          "min": undefined,
          "originSymbol": "TT1",
          "symbol": undefined,
        },
        "tur" => _ChainAsset {
          "address": "0xfFffffFf6448d0746f2a66342B67ef9CAf89478E",
          "decimals": 10,
          "ids": {
            "id": "133300872918374599700079037156071917454",
          },
          "key": "tur",
          "min": undefined,
          "originSymbol": "TUR",
          "symbol": undefined,
        },
        "unit" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 12,
          "ids": {
            "id": "42259045809535163221576417993425387648",
            "palletInstance": 48,
          },
          "key": "unit",
          "min": undefined,
          "originSymbol": "Unit",
          "symbol": undefined,
        },
        "ftmwh" => _ChainAsset {
          "address": "0x566c1cebc6A4AFa1C122E039C4BEBe77043148Ee",
          "decimals": 18,
          "ids": {
            "palletInstance": 48,
          },
          "key": "ftmwh",
          "min": undefined,
          "originSymbol": "FTM.wh",
          "symbol": undefined,
        },
        "hdx" => _ChainAsset {
          "address": "0xFFFfFfff345Dc44DDAE98Df024Eb494321E73FcC",
          "decimals": 12,
          "ids": {
            "id": "69606720909260275826784788104880799692",
          },
          "key": "hdx",
          "min": undefined,
          "originSymbol": "HDX",
          "symbol": undefined,
        },
        "usdcwh" => _ChainAsset {
          "address": "0xE5dE10C4b744bac6b783fAF8d9B9fDFF14Acc3c9",
          "decimals": 6,
          "ids": {
            "palletInstance": 48,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": undefined,
        },
        "agng" => _ChainAsset {
          "address": "0xFFfFFFFF38794F8c53fC7325ea07463dc6965e20",
          "decimals": 18,
          "ids": {
            "id": "75066649112131892397889252914026143264",
          },
          "key": "agng",
          "min": undefined,
          "originSymbol": "AGNG",
          "symbol": undefined,
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": undefined,
      "ecosystem": "alphanet-relay",
      "explorer": {
        "base": "https://moonbase.moonscan.io",
        "txPath": "/tx",
      },
      "genesisHash": "0x91bc6e169807aaa54802737e1c504b2577d4fafedd5a02c10293b1cd60e39527",
      "id": 1287,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": true,
      "key": "moonbase-alpha",
      "name": "Moonbase Alpha",
      "parachainId": 1000,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonbase.moonbeam.network",
      "ss58Format": 1287,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": {
        "name": "Moonbeam",
      },
      "ws": [
        "wss://wss.api.moonbase.moonbeam.network",
      ],
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 3,
      },
      "key": "dev",
      "min": 10000000000000000n,
      "originSymbol": "DEV",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 2256681856n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 0n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "sovereignAccountBalances": undefined,
  },
  "getEstimate": [Function],
  "max": _AssetAmount {
    "address": undefined,
    "amount": 0n,
    "decimals": 12,
    "ids": undefined,
    "key": "unit",
    "min": undefined,
    "originSymbol": "Unit",
    "symbol": undefined,
  },
  "min": _AssetAmount {
    "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
    "amount": 2256681856n,
    "decimals": 12,
    "ids": {
      "id": "42259045809535163221576417993425387648",
      "palletInstance": 48,
    },
    "key": "unit",
    "min": undefined,
    "originSymbol": "Unit",
    "symbol": undefined,
  },
  "source": {
    "balance": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "chain": _Parachain {
      "assets": Map {
        "unit" => _ChainAsset {
          "address": undefined,
          "decimals": 12,
          "ids": undefined,
          "key": "unit",
          "min": undefined,
          "originSymbol": "Unit",
          "symbol": undefined,
        },
      },
      "checkSovereignAccountBalances": false,
      "ecosystem": "alphanet-relay",
      "explorer": undefined,
      "genesisHash": "0xe1ea3ab1d46ba8f4898b6b4b9c54ffc05282d299f89e84bd0fd08067758c9443",
      "isRelay": true,
      "isTestChain": true,
      "key": "alphanet-relay",
      "name": "Alphanet Relay",
      "parachainId": 0,
      "relayGenesisHash": undefined,
      "ss58Format": 42,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": undefined,
      "ws": [
        "wss://relay.api.moonbase.moonbeam.network",
        "wss://fro-moon-rpc-1-moonbase-relay-rpc-1.moonbase.ol-infra.network",
      ],
    },
    "destinationFee": _AssetAmount {
      "address": undefined,
      "amount": 2256681856n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "destinationFeeBalance": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "existentialDeposit": _AssetAmount {
      "address": undefined,
      "amount": 10000000000n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "feeBalance": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "max": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
  },
  "transfer": [Function],
}
`;

exports[`sdk/transferData > asset 'unit' from source 'Moonbase Alpha' to destination 'Alphanet Relay' > should get expected balances 1`] = `
{
  "destination": {
    "balance": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "chain": _Parachain {
      "assets": Map {
        "unit" => _ChainAsset {
          "address": undefined,
          "decimals": 12,
          "ids": undefined,
          "key": "unit",
          "min": undefined,
          "originSymbol": "Unit",
          "symbol": undefined,
        },
      },
      "checkSovereignAccountBalances": false,
      "ecosystem": "alphanet-relay",
      "explorer": undefined,
      "genesisHash": "0xe1ea3ab1d46ba8f4898b6b4b9c54ffc05282d299f89e84bd0fd08067758c9443",
      "isRelay": true,
      "isTestChain": true,
      "key": "alphanet-relay",
      "name": "Alphanet Relay",
      "parachainId": 0,
      "relayGenesisHash": undefined,
      "ss58Format": 42,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": undefined,
      "ws": [
        "wss://relay.api.moonbase.moonbeam.network",
        "wss://fro-moon-rpc-1-moonbase-relay-rpc-1.moonbase.ol-infra.network",
      ],
    },
    "existentialDeposit": _AssetAmount {
      "address": undefined,
      "amount": 10000000000n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": undefined,
      "amount": 2773584905n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "sovereignAccountBalances": undefined,
  },
  "getEstimate": [Function],
  "max": _AssetAmount {
    "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
    "amount": 10000n,
    "decimals": 12,
    "ids": {
      "id": "42259045809535163221576417993425387648",
      "palletInstance": 48,
    },
    "key": "unit",
    "min": undefined,
    "originSymbol": "Unit",
    "symbol": undefined,
  },
  "min": _AssetAmount {
    "address": undefined,
    "amount": 12773584905n,
    "decimals": 12,
    "ids": undefined,
    "key": "unit",
    "min": undefined,
    "originSymbol": "Unit",
    "symbol": undefined,
  },
  "source": {
    "balance": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 10000n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "chain": _EvmParachain {
      "assets": Map {
        "alan" => _ChainAsset {
          "address": "0x9133c5a22024118804089f1fB752b7B2ce2a6351",
          "decimals": 18,
          "ids": {
            "palletInstance": 48,
          },
          "key": "alan",
          "min": undefined,
          "originSymbol": "ALAN",
          "symbol": undefined,
        },
        "ampe" => _ChainAsset {
          "address": "0xfFfFfffF7fee8415e1c2AC3A15C48D3546B95e16",
          "decimals": 12,
          "ids": {
            "id": "170050401128744171791743427490841452054",
          },
          "key": "ampe",
          "min": undefined,
          "originSymbol": "AMPE",
          "symbol": undefined,
        },
        "dev" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 3,
          },
          "key": "dev",
          "min": 10000000000000000n,
          "originSymbol": "DEV",
          "symbol": undefined,
        },
        "lit" => _ChainAsset {
          "address": "0xfffFFfFF31103d490325BB0a8E40eF62e2F614C0",
          "decimals": 12,
          "ids": {
            "id": "65216491554813189869575508812319036608",
          },
          "key": "lit",
          "min": undefined,
          "originSymbol": "LIT",
          "symbol": undefined,
        },
        "maos" => _ChainAsset {
          "address": "0xffffffff06a14960bddc8610d0e694d39a3c682e",
          "decimals": 18,
          "ids": {
            "id": "8812816049497534070792537960559175726",
            "palletInstance": 48,
          },
          "key": "maos",
          "min": undefined,
          "originSymbol": "MAOS",
          "symbol": undefined,
        },
        "otp" => _ChainAsset {
          "address": "0xFfffffFfB3229c8E7657eABEA704d5e75246e544",
          "decimals": 12,
          "ids": {
            "id": "238111524681612888331172110363070489924",
          },
          "key": "otp",
          "min": undefined,
          "originSymbol": "OTP",
          "symbol": undefined,
        },
        "paring" => _ChainAsset {
          "address": "0xFFFffFfF8283448b3cB519Ca4732F2ddDC6A6165",
          "decimals": 18,
          "ids": {
            "id": "173481220575862801646329923366065693029",
          },
          "key": "paring",
          "min": undefined,
          "originSymbol": "PARING",
          "symbol": undefined,
        },
        "pica" => _ChainAsset {
          "address": "0xFFFfFFFF10DD5Fd142163a40Ce0dae8c56e2801f",
          "decimals": 6,
          "ids": {
            "id": "22417088946346045371238623691600461855",
          },
          "key": "pica",
          "min": undefined,
          "originSymbol": "PICA",
          "symbol": undefined,
        },
        "tt1" => _ChainAsset {
          "address": "0xfFffFfFf75976211C786fe4d73d2477e222786Ac",
          "decimals": 18,
          "ids": {
            "id": "156305701417244550631956600137082963628",
          },
          "key": "tt1",
          "min": undefined,
          "originSymbol": "TT1",
          "symbol": undefined,
        },
        "tur" => _ChainAsset {
          "address": "0xfFffffFf6448d0746f2a66342B67ef9CAf89478E",
          "decimals": 10,
          "ids": {
            "id": "133300872918374599700079037156071917454",
          },
          "key": "tur",
          "min": undefined,
          "originSymbol": "TUR",
          "symbol": undefined,
        },
        "unit" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 12,
          "ids": {
            "id": "42259045809535163221576417993425387648",
            "palletInstance": 48,
          },
          "key": "unit",
          "min": undefined,
          "originSymbol": "Unit",
          "symbol": undefined,
        },
        "ftmwh" => _ChainAsset {
          "address": "0x566c1cebc6A4AFa1C122E039C4BEBe77043148Ee",
          "decimals": 18,
          "ids": {
            "palletInstance": 48,
          },
          "key": "ftmwh",
          "min": undefined,
          "originSymbol": "FTM.wh",
          "symbol": undefined,
        },
        "hdx" => _ChainAsset {
          "address": "0xFFFfFfff345Dc44DDAE98Df024Eb494321E73FcC",
          "decimals": 12,
          "ids": {
            "id": "69606720909260275826784788104880799692",
          },
          "key": "hdx",
          "min": undefined,
          "originSymbol": "HDX",
          "symbol": undefined,
        },
        "usdcwh" => _ChainAsset {
          "address": "0xE5dE10C4b744bac6b783fAF8d9B9fDFF14Acc3c9",
          "decimals": 6,
          "ids": {
            "palletInstance": 48,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": undefined,
        },
        "agng" => _ChainAsset {
          "address": "0xFFfFFFFF38794F8c53fC7325ea07463dc6965e20",
          "decimals": 18,
          "ids": {
            "id": "75066649112131892397889252914026143264",
          },
          "key": "agng",
          "min": undefined,
          "originSymbol": "AGNG",
          "symbol": undefined,
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": undefined,
      "ecosystem": "alphanet-relay",
      "explorer": {
        "base": "https://moonbase.moonscan.io",
        "txPath": "/tx",
      },
      "genesisHash": "0x91bc6e169807aaa54802737e1c504b2577d4fafedd5a02c10293b1cd60e39527",
      "id": 1287,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": true,
      "key": "moonbase-alpha",
      "name": "Moonbase Alpha",
      "parachainId": 1000,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonbase.moonbeam.network",
      "ss58Format": 1287,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": {
        "name": "Moonbeam",
      },
      "ws": [
        "wss://wss.api.moonbase.moonbeam.network",
      ],
    },
    "destinationFee": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 2773584905n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "destinationFeeBalance": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 10000n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 3,
      },
      "key": "dev",
      "min": 10000000000000000n,
      "originSymbol": "DEV",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 8658218750000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 3,
      },
      "key": "dev",
      "min": 10000000000000000n,
      "originSymbol": "DEV",
      "symbol": undefined,
    },
    "feeBalance": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 6543210000000000000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 3,
      },
      "key": "dev",
      "min": 10000000000000000n,
      "originSymbol": "DEV",
      "symbol": undefined,
    },
    "max": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 10000n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 0n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
  },
  "transfer": [Function],
}
`;
